tests/sksl/errors/VectorInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 11: index -1 out of range for 'int3'
error: 11: index 3 out of range for 'int3'
2 errors
